--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,8 @@
 [pytest]
+python_files = test_*.py
+python_classes = Test*
+python_functions = test_*
+
 markers =
     easy_operation: mark an easy mathematical operation.
     difficult_operation: mark a difficult mathematical operation.
